Thu Aug 27 07:45:34 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_tools.c: add Queue#close(exception=false) and
	  SizedQueue#close(exception=false).
	  [Feature #10600]

	  Trying to deq from a closed empty queue return nil
	  if exception parameter equals to false (default).

	  If exception parameter is truthy, it raises
	  ClosedQueueError (< StopIteration).
	  ClosedQueueError inherits StopIteration so that you can write:

	    loop{ e = q.deq; (using e) }

	  Trying to close a closed queue raises ClosedQueueError.

	  Blocking threads to wait deq for Queue and SizedQueue will be
	  restarted immediately by returning nil (exception=false) or
	  raising a ClosedQueueError (exception=true).

	  Blocking threads to wait enq for SizedQueue will be
	  restarted by raising a ClosedQueueError immediately.

	  The above specification is not proposed specification, so that
	  we need to continue discussion to conclude specification this
	  method.

	* test/thread/test_queue.rb: add tests originally written by
	  John Anderson and modify detailed behavior.

Wed Aug 26 10:52:02 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_memsearch_wchar, rb_memsearch_qchar): test matching
	  till the end of string.  [ruby-core:70592] [Bug #11488]

	* test/ruby/test_m17n.rb (test_include?, tet_index): add tests by
	  Tom Stuart.

Wed Aug 26 09:26:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id_table.c (list_table_extend, hash_table_extend): remove C99
	  features.  [ruby-dev:49239] [Bug #11487]

Tue Aug 25 06:34:43 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (w32_symlink): implement symlink().

Mon Aug 24 16:01:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_locale_encindex): find encoding index without
	  making a string object every time.  [ruby-core:58160] [Bug #9080]

Sat Aug 22 15:43:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (check_funcall_failed, check_funcall_missing): cache