@@ -1,3 +1,8 @@
+Thu Aug 27 15:24:57 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c (iseq_set_sequence): rename variable names
+	  to make it readable.
+
 Thu Aug 27 07:45:34 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* thread_tools.c: add Queue#close(exception=false) and
